syntax = "proto3";

package api;
option go_package = "./;api";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service Hi {
    rpc HelloWorld(HelloRequest) returns (HelloResponse);
}